--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,16 @@
 # Web
 Flask==3.0.3
 gunicorn==21.2.0
-Flask-Cors==4.0.0 # optional, only if you need cross-origin requests
+Flask-Cors==4.0.0
 
-# Audio / DSP stack
-numpy==1.26.4
-scipy==1.11.4
-numba==0.58.1
-llvmlite==0.41.1
-librosa==0.10.1
+# Audio / DSP stack – safe for Python 3.13
+numpy==2.0.1
+scipy==1.14.1
+librosa==0.10.2.post1
 soundfile==0.12.1
-audioread==3.0.0
+audioread==3.0.1
 pyloudnorm==0.1.1
-soxr==0.3.7 # optional, speeds up resampling if librosa uses it
+soxr==0.3.7
 
 # Reference-based mastering
 matchering==2.0.8
