--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+# Web server
 Flask==3.0.3
 gunicorn==21.2.0
 Flask-Cors==4.0.0
+
+# Core audio / DSP
 numpy==1.26.4
 scipy==1.11.4
 librosa==0.10.2.post1
@@ -8,5 +11,7 @@ soundfile==0.12.1
 audioread==3.0.1
 pyloudnorm==0.1.1
 soxr==0.3.7
-matchering==2.0.6
 imageio-ffmpeg==0.4.9
+
+# Optional reference-based mastering
+matchering==2.0.6
